ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -91,7 +91,7 @@ The owner of the VASP Contract can change the public keys and can transfer owner
 ```pseudocode
 owner: address {internal}
 candidateOwner: address {internal}
-handshakeKey: string {public}
+transportKey: string {public}
 signingKey: string {public}
 ```
 
@@ -129,7 +129,7 @@ setHandshakeKey(newKey: string)
 ```
 
 **Description:**  
-Sets the contract's state variable `handshakeKey` to `newKey`.
+Sets the contract's state variable `transportKey` to `newKey`.
 
 **Conditions:**  
 Function is called by the address that is stored in state variable `owner`.
@@ -192,7 +192,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE0ODcyMjEwNjYsLTYzNjMxNzQ4OSw0Mj
-k5NTY1MTAsMTkxNjY3NjQwNiwtNTc2MTc0NDUsMTM1MTY4ODk0
-OV19
+eyJoaXN0b3J5IjpbLTEzNjc4MDgxNzQsLTE0ODcyMjEwNjYsLT
+YzNjMxNzQ4OSw0Mjk5NTY1MTAsMTkxNjY3NjQwNiwtNTc2MTc0
+NDUsMTM1MTY4ODk0OV19
 -->
