ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -135,7 +135,7 @@ Sets the contract's state variable `transportKey` to `newKey`.
 Function is called by the address that is stored in state variable `owner`.
 
 **Use Case:**  
-Owner changes the public key required to establish an OpenVASP session and to decrypt messages sent (e.g. encryption of Whisper envelopes.
+Owner changes the public key required to secure communication on the transport layer (e.g. encryption of Whisper envelopes).
 
 ```pseudocode
 setSigningKey(newKey: string)
@@ -192,7 +192,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIxNDY1NDE5ODEsLTE0ODcyMjEwNjYsLT
-YzNjMxNzQ4OSw0Mjk5NTY1MTAsMTkxNjY3NjQwNiwtNTc2MTc0
-NDUsMTM1MTY4ODk0OV19
+eyJoaXN0b3J5IjpbNDg5NzY2Nzg4LC0xNDg3MjIxMDY2LC02Mz
+YzMTc0ODksNDI5OTU2NTEwLDE5MTY2NzY0MDYsLTU3NjE3NDQ1
+LDEzNTE2ODg5NDldfQ==
 -->
