--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -92,6 +92,7 @@ The owner of the VASP Contract can change the public keys and can transfer owner
 owner: address {internal}
 candidateOwner: address {internal}
 transportKey: string {public}
+messageKey: string {public}
 signingKey: string {public}
 ```
 
@@ -125,7 +126,7 @@ Function is called by the address that is stored in state variable `candidateOwn
 Called by the future owner in order to accept transfer of the contract's ownership.
 
 ```pseudocode
-setHandshakeKey(newKey: string)
+setTransportKey(newKey: string)
 ```
 
 **Description:**  
@@ -192,7 +193,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNDg5NzY2Nzg4LC0xNDg3MjIxMDY2LC02Mz
+eyJoaXN0b3J5IjpbOTU4Nzg2NTAyLC0xNDg3MjIxMDY2LC02Mz
 YzMTc0ODksNDI5OTU2NTEwLDE5MTY2NzY0MDYsLTU3NjE3NDQ1
 LDEzNTE2ODg5NDldfQ==
 -->
