ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -139,6 +139,19 @@ Function is called by the address that is stored in state variable `owner`.
 Owner changes the public key required to secure communication on the transport layer (e.g. encryption of Whisper envelopes).
 
 ```pseudocode
+setMessageKey(newKey: string)
+```
+
+**Description:**  
+Sets the contract's state variable `messageKey` to `newKey`.
+
+**Conditions:**  
+Function is called by the address that is stored in state variable `owner`.
+
+**Use Case:**  
+Owner changes the public key required to secure communication on the session layer (e.g. encryption of Whisper envelopes).
+
+```pseudocode
 setSigningKey(newKey: string)
 ```
 
@@ -193,7 +206,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU4Nzg2NTAyLC0xNDg3MjIxMDY2LC02Mz
-YzMTc0ODksNDI5OTU2NTEwLDE5MTY2NzY0MDYsLTU3NjE3NDQ1
-LDEzNTE2ODg5NDldfQ==
+eyJoaXN0b3J5IjpbMTQwMDE3NjA0MywtMTQ4NzIyMTA2NiwtNj
+M2MzE3NDg5LDQyOTk1NjUxMCwxOTE2Njc2NDA2LC01NzYxNzQ0
+NSwxMzUxNjg4OTQ5XX0=
 -->
