--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -136,7 +136,7 @@ Sets the contract's state variable `transportKey` to `newKey`.
 Function is called by the address that is stored in state variable `owner`.
 
 **Use Case:**  
-Owner changes the public key required to encrypt OpenVASP messages (session layer).
+Owner changes the public key required to secure communication on the transport layer (e.g. encryption of Whisper envelopes).
 
 ```pseudocode
 setMessageKey(newKey: string)
@@ -149,7 +149,7 @@ Sets the contract's state variable `messageKey` to `newKey`.
 Function is called by the address that is stored in state variable `owner`.
 
 **Use Case:**  
-Owner changes the public key required to secure communication on the session layer (e.g. encryption of Whisper envelopes).
+Owner changes the public key required to encrypt OpenVASP messages (session layer).
 
 ```pseudocode
 setSigningKey(newKey: string)
@@ -206,7 +206,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODY1MDI0OTk1LC0xNDg3MjIxMDY2LC02Mz
-YzMTc0ODksNDI5OTU2NTEwLDE5MTY2NzY0MDYsLTU3NjE3NDQ1
-LDEzNTE2ODg5NDldfQ==
+eyJoaXN0b3J5IjpbLTIxNDMwMjE1NTYsLTE0ODcyMjEwNjYsLT
+YzNjMxNzQ4OSw0Mjk5NTY1MTAsMTkxNjY3NjQwNiwtNTc2MTc0
+NDUsMTM1MTY4ODk0OV19
 -->
