--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -197,6 +197,8 @@ The Index Contract It has no owner with special privileges to rule out any unwan
 
 For the VASP Contract, the ability to transfer ownership is considered a must to deal with situations like change of ownership of the VASP entity or a compromised private key.
 
+###### Separate keys for transport and session layer
+
 Separating encryption on transport and session layers will allow for a better security architecture as the internet-facing Whisper could be decoupled from the server handling the sessions. Further, it allows the usage of a Whisper node by different session handlers without giving access to session layers details, particularly originator/beneficiary data
 
 ###### Identity verification
@@ -208,7 +210,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg4NDU5NzU0LC0xNDg3MjIxMDY2LC02Mz
-YzMTc0ODksNDI5OTU2NTEwLDE5MTY2NzY0MDYsLTU3NjE3NDQ1
-LDEzNTE2ODg5NDldfQ==
+eyJoaXN0b3J5IjpbLTU0Mzc3Mjg5MSwtMTQ4NzIyMTA2NiwtNj
+M2MzE3NDg5LDQyOTk1NjUxMCwxOTE2Njc2NDA2LC01NzYxNzQ0
+NSwxMzUxNjg4OTQ5XX0=
 -->
