ovip-0003.md updated from https://stackedit.io/

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -199,7 +199,7 @@ For the VASP Contract, the ability to transfer ownership is considered a must to
 
 ###### Separate keys for transport and session layer
 
-Separating encryption on transport and session layers will allow for a better security architecture as the internet-facing Whisper could be decoupled from the server handling the sessions. Further, it allows the usage of a Whisper node by different session handlers without giving access to session layers details, particularly originator/beneficiary data
+Separating encryption on transport and session layers will allow for a better security architecture as the internet-facing Whisper could be decoupled from the server handling the sessions. Further, it allows the usage of a Whisper node by different session handlers without giving access to session layers details, particularly originator/beneficiary data.
 
 ###### Identity verification
 
@@ -210,7 +210,7 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 The specification proposed in this OVIP is not backwards compatible.
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTU0Mzc3Mjg5MSwtMTQ4NzIyMTA2NiwtNj
-M2MzE3NDg5LDQyOTk1NjUxMCwxOTE2Njc2NDA2LC01NzYxNzQ0
-NSwxMzUxNjg4OTQ5XX0=
+eyJoaXN0b3J5IjpbMTc3NTA2NDcsLTE0ODcyMjEwNjYsLTYzNj
+MxNzQ4OSw0Mjk5NTY1MTAsMTkxNjY3NjQwNiwtNTc2MTc0NDUs
+MTM1MTY4ODk0OV19
 -->
