Revised public keys & channels
Adjusted public keys to new layer model; added channels

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -91,6 +91,7 @@ The owner of the VASP Contract can change the public keys and can transfer owner
 ```pseudocode
 owner: address {internal}
 candidateOwner: address {internal}
+channels: bytes4 {public}
 transportKey: string {public}
 messageKey: string {public}
 signingKey: string {public}
@@ -111,6 +112,8 @@ None
 **Use Case:**  
 Called by the contract owner to prepare the transfer of the contract's ownership to a new owner.
 
+
+
 ```pseudocode
 acceptOwnership(): bool {public}
 ```
@@ -125,6 +128,27 @@ Function is called by the address that is stored in state variable `candidateOwn
 **Use Case:**  
 Called by the future owner in order to accept transfer of the contract's ownership.
 
+
+
+```pseudocode
+setChannels(newChannels: bytes4)
+```
+
+**Description:**  
+Sets the contract's state variable `channels` to `newChannels`.
+
+**Conditions:**  
+Function is called by the address that is stored in state variable `owner`.
+
+**Use Case:**  
+Owner changes the communication channels the VASP is accepting for OpenVASP messages. `channels` is to be interpreted as a bit mask, where each bit indicates a specific channel. At this time, the following channels are available:
+
+| Bit  | Channel                                         |
+| ---- | ----------------------------------------------- |
+| 1    | Ethereum Whisper as specified per [ovip-0010]() |
+
+
+
 ```pseudocode
 setTransportKey(newKey: string)
 ```
@@ -138,6 +162,8 @@ Function is called by the address that is stored in state variable `owner`.
 **Use Case:**  
 Owner changes the public key required to secure communication on the transport layer (e.g. encryption of Whisper envelopes).
 
+
+
 ```pseudocode
 setMessageKey(newKey: string)
 ```
@@ -150,6 +176,8 @@ Function is called by the address that is stored in state variable `owner`.
 
 **Use Case:**  
 Owner changes the public key required to encrypt OpenVASP messages (session layer).
+
+
 
 ```pseudocode
 setSigningKey(newKey: string)
@@ -208,9 +236,3 @@ Ways to verify the VASP's identity will be covered in a separate OVIP.
 # Backwards Compatibility
 
 The specification proposed in this OVIP is not backwards compatible.
-
-<!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc3NTA2NDcsLTE0ODcyMjEwNjYsLTYzNj
-MxNzQ4OSw0Mjk5NTY1MTAsMTkxNjY3NjQwNiwtNTc2MTc0NDUs
-MTM1MTY4ODk0OV19
--->
