Change 'Dictionary' to 'Directory'

--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -12,20 +12,20 @@ Created: 2020-06-13
 
 This OVIP specifies the initial implementation of the [VASP Registry](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) interface. It provides a centrally managed lookup for linking VASP Identifiers to real world entities using decentral storage and accessibility.
 
-As specified in [OVIP-0011](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) the VASP Dictionary consists of a lookup smart contract, the VASP Registry, providing a reference to VASP Credentials and a data source for fetching the VASP Credentials. Here the lookup value consists of the Ethereum transaction id which inserted the VASP Credentials. The data source will be Ethereum event logs which are emitted when inserting new data.
+As specified in [OVIP-0011](https://github.com/OpenVASP/ovips/blob/master/ovip-0011.md) the VASP Directory consists of a lookup smart contract, the VASP Registry, providing a reference to VASP Credentials and a data source for fetching the VASP Credentials. Here the lookup value consists of the Ethereum transaction id which inserted the VASP Credentials. The data source will be Ethereum event logs which are emitted when inserting new data.
 
 # Roles
 
 Note that all roles are represented as Ethereum addresses. This implies that they can take shape as a standard Ethereum address with private key access, but also as a smart contract which could represent more complex access policies (e.g. multisig).
 
 **Consumer**
-End-user of the VASP Dictionary. Wants to retrieve verifiable Credentials.
+End-user of the VASP Directory. Wants to retrieve verifiable Credentials.
 
 **Administrator**
-Responsible for managing the content of the VASP Dictionary.
+Responsible for managing the content of the VASP Directory.
 
 **Owner**
-Responsible for managing the lifecycle of the VASP Dictionary
+Responsible for managing the lifecycle of the VASP Directory
 
 # Data Structures
 
@@ -69,7 +69,7 @@ This method is used by the administrator to insert new *credentials* and their S
 
 **Behavior:**
 There can only be one lookup value per VASP Identifier. If there is no existing entry for the VASP Identifier, a new entry will be  created. If this method is called for a VASP Identifier which already exists, the method should fail. Overwriting of values is only possible by revoking them first.
-The Keccak256 hash of the credentials is calculated as part of this method and inserted into the Dictionary. The credentials themselves are not stored explicitly.
+The Keccak256 hash of the credentials is calculated as part of this method and inserted into the Directory. The credentials themselves are not stored explicitly.
 
 **Event log:**
 
@@ -90,7 +90,7 @@ revokeCredentials(vaspID:bytes12) {Administrator}
 This method is used by the administrator to revoke the *credentials* for a specific VASP with identifier *vaspID*. 
 
 **Behavior:**
-If there is no existing entry for the VASP Identifier, the method should fail. If this method is called for a VASP Identifier which already exists, the entry in the Dictionary must be removed.
+If there is no existing entry for the VASP Identifier, the method should fail. If this method is called for a VASP Identifier which already exists, the entry in the Directory must be removed.
 
 **Event log:**
 
@@ -152,7 +152,7 @@ terminateContract(): bool {owner}
 ```
 
 **Description:**  
-Ends the lifecycle of the VASP Dictionary.
+Ends the lifecycle of the VASP Directory.
 
 **Behavior:**  
 Function clears (removes) all content of the dictionary. Subsequently the owner and the administrator are set to 0x0.
