Consistent method signature notation

--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -47,7 +47,7 @@ administrator: address {internal}
 **Signature:**
 
 ```pseudocode
-**getCredentialRef(vaspID:bytes12):(string,bytes32) {public}**
+**getCredentialRef(bytes12 vaspID) returns (string, bytes32) {public}**
 ```
 
 **Description:**
@@ -61,7 +61,7 @@ Given a VASP Identifier (*vaspID*) it returns a tuple of two strings. The first 
 **Signature:**
 
 ```pseudocode
-insertCredentials(vaspID:bytes12,credentials:string) {Administrator}
+insertCredentials(bytes12 vaspID,string credentials) {Administrator}
 ```
 
 **Description:**
@@ -83,7 +83,7 @@ On any successful insertion of Credentials the *CredentialsInserted* event must 
 **Signature:**
 
 ```pseudocode
-revokeCredentials(vaspID:bytes12) {Administrator}
+revokeCredentials(bytes12 vaspID) {Administrator}
 ```
 
 **Description:**
@@ -102,7 +102,7 @@ On any successful revocation of Credentials the *CredentialsRevoked* event must 
 ## Change Administrator
 
 ```pseudocode
-transferAdministrator(newAdministrator:address): bool {owner}
+transferAdministrator(address newAdministrator) returns bool {owner}
 ```
 
 **Description:**  
@@ -117,7 +117,7 @@ Called by the contract owner to change the contract's administrator.
 ## Transfer Ownership
 
 ```pseudocode
-transferOwnership(newOwner:address): bool {owner}
+transferOwnership(address newOwner) returns bool {owner}
 ```
 
 **Description:**  
@@ -132,7 +132,7 @@ Called by the contract owner to prepare the transfer of the contract's ownership
 ## Accept Ownership
 
 ```pseudocode
-acceptOwnership(): bool {candidateOwner}
+acceptOwnership() returns bool {candidateOwner}
 ```
 
 **Description:**  
@@ -148,7 +148,7 @@ Called by the future owner in order to accept transfer of the contract's ownersh
 ## Terminate Contract
 
 ```pseudocode
-terminateContract(): bool {owner}
+terminateContract() returns bool {owner}
 ```
 
 **Description:**  
