--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -87,6 +87,9 @@ handshakeKey: string {public}
 signingKey: string {public}
 ```
 
+**Description:**
+The *signingkey* and the *handshakeKey* must be stored in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes (66 characters) and is prefixed with '02' or '03'.
+
 ### Functions
 
 ```pseudocode
