--- a/README.mediawiki
+++ b/README.mediawiki
@@ -82,6 +82,13 @@ We thank the Bitcoin community for introducing this process to handle standard i
 | David Riegelnig
 | Standard
 | Proposal
+|-
+| [[ovip-0014.md|14]]
+|
+| Message Family: Transfer (TFR)
+| David Riegelnig
+| Standard
+| Proposal
 |}
 
 <!-- IMPORTANT!  See the instructions at the top of this page, do NOT JUST add OVIPs here! -->
