--- a/ovip-0011.md
+++ b/ovip-0011.md
@@ -40,11 +40,11 @@ Claim about a VASP issued by a trusted third party via its *VASP Registry*.
 Conformant *VASP Registries* should implement the following function:
 
 ```pseudocode
-getCredentialRef(vaspID:bytes12): bytes32 {public}
+**getCredentialRef(bytes12 vaspID) returns (string, bytes32) {public}**
 ```
 
 **Description:**  
-Returns the reference to a *Credential* about a VASP specified by its *VASP Identifier* (`vaspID`).
+Returns a tuple consisting of the reference to a *Credential* and the Keccak256 hash of the *Credential* about a VASP specified by its *VASP Identifier* (`vaspID`).
 
 The reference being a pointer that allows to retrieve the actual *Credential*. However, the way how the  *Credential* can be retrieved is defined by the respective *VASP Registry* and must be known to the processor calling the function.
 
