ovip-0002.md updated from https://stackedit.io/

--- a/ovip-0002.md
+++ b/ovip-0002.md
@@ -74,7 +74,7 @@ Two hexadecimal characters representing an 8-bit CRC-8/WCDMA. The generic CRC al
 
 ##### 2.1.6. VASP Identifier
 
-The VASP Identfier is the combination of the VASP Code Type, the two Reserved Bits and the VASP Code. It uniquely, globally identifies a VASP. It is, in other words, the first 12 hexadecimal characters of a VAAN.
+The VASP Identfier is the implicit combination of the VASP Code Type, the two Reserved Bits and the VASP Code. It uniquely, globally identifies a VASP. It is, in other words, the first 12 hexadecimal characters of a VAAN.
 
 > Example:	1000bb528777
 
@@ -140,3 +140,6 @@ VASPs can assign as many VAANs to one customer as they wish. Furthermore, VASPs 
 
 The VAAN specification proposed in this OVIP is not backwards compatible.
 
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbMTQ0ODIxMDkxOV19
+-->
