--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -12,22 +12,11 @@ Created: 2020-06-14
 
 Text
 
-# Definitions
-
-**VASP Identifier**</br>
-Globally unique VASP identifier as specified in [ovip-0002]().
-
-**VASP Registry**</br>
-Smart contract operated by a trusted third party providing access to claims about a VASP referenced by its *VASP Identifier*.
-
-**Credential**</br>
-Claim about a VASP issued by a trusted third party via its *VASP Registry*.
-
 # Specification
 
 ## 1. Base
 
-Credentials should be conformant to the W3C standard on "Verifiable Credentials" as specified in https://www.w3.org/TR/vc-data-model/.
+The OpenVASP Verification is a "Verifiable Credential" as specified in https://www.w3.org/TR/vc-data-model/.
 
 ## 2. Credential Structure
 
@@ -50,26 +39,32 @@ Credentials should be conformant to the W3C standard on "Verifiable Credentials"
 
 
 
-| Property            | Multiplicity | Values                                          | See  |
-| :------------------ | :----------- | :---------------------------------------------- | :--- |
-| `@context`          | 1..1         | `https://www.w3.org/2018/credentials/v1`        |      |
-| `id`                | 1..1         | `https://openvasp.org/verification`             |      |
-| `type`              | 1..1         | `VerifiableCredential`, `OpenVASPCredential`    |      |
-| `issuer`            | 1..1         | `https://openvasp.org`                          |      |
-| `validFrom`         | 1..1         | String value as per RFC3339                     |      |
-| `credentialSubject` | 1..1         | Set of objects containing claims about the VASP | 2.2  |
-| `proof`             | 1..1         | Set of objects representing a signature         | 2.3  |
+| Level 1             | Level 2        | Level 3     | Multiplicity | Values                                       | See  |
+| :------------------ | -------------- | ----------- | :----------- | :------------------------------------------- | :--- |
+| `@context`          |                |             | 1..1         | `https://www.w3.org/2018/credentials/v1`     |      |
+| `id`                |                |             | 1..1         | `https://openvasp.org/verification`          |      |
+| `type`              |                |             | 1..1         | `VerifiableCredential`, `OpenVASPCredential` |      |
+| `issuer`            |                |             | 1..1         | `https://openvasp.org`                       |      |
+| `validFrom`         |                |             | 1..1         | String value as per RFC3339                  |      |
+| `credentialSubject` |                |             | 1..1         |                                              |      |
+|                     | `vasp`         |             | 1..1         | Elements as specified in [ovip-0013](), 1.1  |      |
+|                     | `verification` |             | 1..1         |                                              |      |
+|                     |                | `type`      | 1..1         | `Licensed VASP`                              |      |
+|                     |                | `license`   | 1..1         | Type of recognized license or registration   |      |
+|                     |                | `country`   | 1..1         | Country of registration                      |      |
+|                     |                | `authority` | 1..1         | Licensing authority                          |      |
+|                     |                | `regid`     | 1..1         | License number                               |      |
+|                     | `agreement`    |             | 0..*         |                                              |      |
+|                     |                | type        | 1..1         | Signed agreement type                        |      |
+|                     |                | version     | 1..1         | Signed agreement version                     |      |
+| `proof`             |                |             | 1..1         | Set of objects representing a signature      |      |
+|                     | type           |             | 1..1         |                                              |      |
+|                     | created        |             | 1..1         | String value as per RFC3339                  |      |
+|                     | purpose        |             | 1..1         |                                              |      |
+|                     | jws            |             | 1..1         |                                              |      |
+|                     |                |             |              |                                              |      |
 
-### 2.2. Properties of `credentialSubject`
-
-| Property            | Multiplicity | Values                                          | See  |
-| :------------------ | :----------- | :---------------------------------------------- | :--- |
-| `id`                | 1..1         | VASP Identifier                                 |      |
-| `name`              | 1..1         | Legal name                                      |      |
-| `address`           | 1..1         |                                                 |      |
-| `validFrom`         | 1..1         | String value as per RFC3339                     |      |
-| `credentialSubject` | 1..1         | Set of objects containing claims about the VASP | 2.2  |
-| `proof`             | 1..1         | Set of objects representing a signature         | 2.3  |
+### 
 
 # Motivation
 
