ovip-0015.md updated from https://stackedit.io/

--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -55,8 +55,8 @@ The OpenVASP Verification is a "Verifiable Credential" as specified in https://w
 |                     |                | `authority` | 1..1         | Licensing authority                          |      |
 |                     |                | `regid`     | 1..1         | License number                               |      |
 |                     | `agreement`    |             | 0..*         |                                              |      |
-|                     |                | type        | 1..1         | Signed agreement type                        |      |
-|                     |                | version     | 1..1         | Signed agreement version                     |      |
+|                     |                | `type`        | 1..1         | Signed agreement type                        |      |
+|                     |                | `version`     | 1..1         | Signed agreement version                     |      |
 | `proof`             |                |             | 1..1         | Set of objects representing a signature      |      |
 |                     | type           |             | 1..1         |                                              |      |
 |                     | created        |             | 1..1         | String value as per RFC3339                  |      |
@@ -77,3 +77,6 @@ Text
 # Backwards Compatibility
 
 Specification proposes new functionality.
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbODQ0ODczMzI4XX0=
+-->
