ovip-0015.md updated from https://stackedit.io/

--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -58,9 +58,9 @@ The OpenVASP Verification is a "Verifiable Credential" as specified in https://w
 |                     |                | `type`        | 1..1         | Signed agreement type                        |      |
 |                     |                | `version`     | 1..1         | Signed agreement version                     |      |
 | `proof`             |                |             | 1..1         | Set of objects representing a signature      |      |
-|                     | type           |             | 1..1         |                                              |      |
-|                     | created        |             | 1..1         | String value as per RFC3339                  |      |
-|                     | purpose        |             | 1..1         |                                              |      |
+|                     | `type`           |             | 1..1         |                                              |      |
+|                     | `created`        |             | 1..1         | String value as per RFC3339                  |      |
+|                     | `purpose`        |             | 1..1         |                                              |      |
 |                     | jws            |             | 1..1         |                                              |      |
 |                     |                |             |              |                                              |      |
 
@@ -78,5 +78,5 @@ Text
 
 Specification proposes new functionality.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODQ0ODczMzI4XX0=
+eyJoaXN0b3J5IjpbLTE4MDY1MTA4MCw4NDQ4NzMzMjhdfQ==
 -->
