ovip-0015.md updated from https://stackedit.io/

--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -61,7 +61,7 @@ The OpenVASP Verification is a "Verifiable Credential" as specified in https://w
 |                     | `type`           |             | 1..1         |                                              |      |
 |                     | `created`        |             | 1..1         | String value as per RFC3339                  |      |
 |                     | `purpose`        |             | 1..1         |                                              |      |
-|                     | jws            |             | 1..1         |                                              |      |
+|                     | `jws`            |             | 1..1         |                                              |      |
 |                     |                |             |              |                                              |      |
 
 ### 
@@ -78,5 +78,6 @@ Text
 
 Specification proposes new functionality.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4MDY1MTA4MCw4NDQ4NzMzMjhdfQ==
+eyJoaXN0b3J5IjpbLTY5NzI5MDIwLC0xODA2NTEwODAsODQ0OD
+czMzI4XX0=
 -->
