Add note about public key format

--- a/ovip-0006.md
+++ b/ovip-0006.md
@@ -28,6 +28,10 @@ The proposed messages structure is described in the following paragraph (leaving
 
 Please note that Signature is deliberately removed from the tables as it is not a part of the protocol messages.
 
+#### Public Key Format
+
+The Secp256k1 public keys usage remains as specified in the original Whitepaper. However the Whitepaper does not specify the exact format. The public keys must be send in [compressed](https://learnmeabitcoin.com/guide/public-key) form. That is it must be represented with exactly 33 bytes (66 characters) and is prefixed with '02' or '03'.
+
 #### Transfer Request
 
 | Level 1     | Level 2               | Name        | Type         | Mult. | Comment                             |
