Add selfdestruct and halt to Index

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -76,6 +76,26 @@ Returns the VASP Code that was assigned to the specified `vaspContract` by the I
 **Use Case:**  
 Called to get the VASP Code which is uniquely mapped to a given VASP Contract address.
 
+```pseudocode
+halt(): bytes8 {owner}
+```
+
+**Description:**  
+Disables *createVaspContract* functionality for all callers and arguments. 
+
+**Use Case:**  
+End the lifecycle of the contract while preserving the current mapping and allowing queries towards existing entries.
+
+```pseudocode
+selfdestruct(recipient:address): bytes8 {owner}
+```
+
+**Description:**  
+Frees memory allocated by the contract and transfers all potentially accidentally funds send to the contract to *recipient*. 
+
+**Use Case:**  
+End the lifecycle of the VASP Index without preserving the existing mapping. Invalidates and obsoletes existing entries.
+
 ## VASP Contract
 
 Each VASP participating in the OpenVASP protocol deploys and owns a dedicated VASP Contract, representing the VASP's identity.
