Consistent signature notation + events

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -43,11 +43,11 @@ The Index Contract serves as a universal smart contract factory and is deployed 
 ### Functions
 
 ```pseudocode
-createVaspContract(owner:address, vaspCode:bytes8): address {public}
+createVaspContract(address owner, bytes8 vaspCode, string transportKey, string messageKey, string signingKey) returns address {public}
 ```
 
 **Description:**  
-Deploys a VASP Contract, owned by `owner` and returns the address of the deployed contract. The Index Contract records the deployed contract's address under the specified `vaspCode` in its internal mapping.
+Deploys a VASP Contract, owned by `owner` and returns the address of the deployed contract. The Index Contract records the deployed contract's address under the specified `vaspCode` in its internal mapping. The *transportKey*, *messageKey* and *signingKey* respectively are set on deployment of the VASP contract. 
 
 **Conditions:**  
 `address` must be a valid Ethereum address; and  
@@ -56,8 +56,16 @@ Deploys a VASP Contract, owned by `owner` and returns the address of the deploye
 **Use Case:**  
 Called by a VASP to deploy a VASP Contract that represents the identity of the VASP within the OpenVASP protocol and that is mapped to a unique VASP Code chosen by the VASP.
 
+**Event log:**
+
 ```pseudocode
-getVaspByCode(vaspCode:bytes8): address {public}
+VaspContractIssued(bytes8 indexed vaspCode, address indexed vaspContractAddress, string transportKey, string messageKey, string signingKey)
+```
+
+All new deployed VASP Contracts must be logged as described above.
+
+```pseudocode
+getVaspByCode(bytes8 vaspCode) returns address {public}
 ```
 
 **Description:**  
@@ -67,7 +75,7 @@ Returns the address of the VASP Contract which has been recorded under the speci
 Called to get the VASP Contract which is uniquely assigned to a specific VASP Code. Intended method to retrieve a VASP Contract.
 
 ```pseudocode
-getVaspCode(vaspContract:address): bytes8 {public}
+getVaspCode(address vaspContract) returns bytes8 {public}
 ```
 
 **Description:**  
@@ -77,7 +85,7 @@ Returns the VASP Code that was assigned to the specified `vaspContract` by the I
 Called to get the VASP Code which is uniquely mapped to a given VASP Contract address.
 
 ```pseudocode
-halt(): bytes8 {owner}
+halt() {owner}
 ```
 
 **Description:**  
@@ -87,7 +95,7 @@ Disables *createVaspContract* functionality for all callers and arguments.
 End the lifecycle of the contract while preserving the current mapping and allowing queries towards existing entries.
 
 ```pseudocode
-selfdestruct(recipient:address): bytes8 {owner}
+selfdestruct(recipient:address) {owner}
 ```
 
 **Description:**  
@@ -109,12 +117,12 @@ The owner of the VASP Contract can change the public keys and can transfer owner
 ### State Variables
 
 ```pseudocode
-owner: address {internal}
-candidateOwner: address {internal}
-channels: bytes4 {public}
-transportKey: string {public}
-messageKey: string {public}
-signingKey: string {public}
+address owner {internal}
+address candidateOwner {internal}
+bytes4 channels {public}
+string transportKey {public}
+string messageKey {public}
+string signingKey {public}
 ```
 
 **Description:**
@@ -123,7 +131,7 @@ The *signingkey* and the *handshakeKey* must be stored in [compressed](https://l
 ### Functions
 
 ```pseudocode
-transferOwnership(newOwner:address): bool {public}
+transferOwnership(address newOwner) returns bool {public}
 ```
 
 **Description:**  
@@ -138,7 +146,7 @@ Called by the contract owner to prepare the transfer of the contract's ownership
 
 
 ```pseudocode
-acceptOwnership(): bool {public}
+acceptOwnership() returns bool {public}
 ```
 
 **Description:**  
@@ -154,7 +162,7 @@ Called by the future owner in order to accept transfer of the contract's ownersh
 
 
 ```pseudocode
-setChannels(newChannels: bytes4)
+setChannels(bytes4 newChannels)
 ```
 
 **Description:**  
@@ -173,7 +181,7 @@ Owner changes the communication channels the VASP is accepting for OpenVASP mess
 
 
 ```pseudocode
-setTransportKey(newKey: string)
+setTransportKey(string newKey)
 ```
 
 **Description:**  
@@ -185,7 +193,13 @@ Function is called by the address that is stored in state variable `owner`.
 **Use Case:**  
 Owner changes the public key required to secure communication on the transport layer (e.g. encryption of Whisper envelopes).
 
+**Event log:**
 
+```pseudocode
+TransportKeyChanged(string oldKey, string newKey)
+```
+
+Key changes must be logged, including the previous and the new key. Note that the log is implicitely indexed by the log signature and by the emitting VASP Contract address.
 
 ```pseudocode
 setMessageKey(newKey: string)
@@ -200,10 +214,16 @@ Function is called by the address that is stored in state variable `owner`.
 **Use Case:**  
 Owner changes the public key required to encrypt OpenVASP messages (session layer).
 
-
+**Event log:**
 
 ```pseudocode
-setSigningKey(newKey: string)
+MessageKeyChanged(string oldKey, string newKey)
+```
+
+Key changes must be logged, including the previous and the new key. Note that the log is implicitely indexed by the log signature and by the emitting VASP Contract address.
+
+```pseudocode
+setSigningKey(string newKey)
 ```
 
 **Description:**  
@@ -214,6 +234,14 @@ Function is called by the address that is stored in state variable `owner`.
 
 **Use Case:**  
 Owner changes the public key required to verify message signatures.
+
+**Event log:**
+
+```pseudocode
+MessageKeyChanged(string oldKey, string newKey)
+```
+
+Key changes must be logged, including the previous and the new key. Note that the log is implicitely indexed by the log signature and by the emitting VASP Contract address.
 
 # Motivation
 
