Add description & funtionality around owner

--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -38,7 +38,14 @@ The combination of the VASP Code Type and the VASP Code globally, uniquely ident
 
 ## Index Contract
 
-The Index Contract serves as a universal smart contract factory and is deployed only once by the OpenVASP Association. It has no owner with special privileges.
+The Index Contract serves as a universal smart contract factory and is deployed only once by the OpenVASP Association. The owner of the contract merely has the ability to halt or terminate the contract in emergency situations or if required by protocol upgrades.  
+
+### State Variables
+
+```pseudocode
+address owner {internal}
+mapping (bytes8 => address) index {internal}
+```
 
 ### Functions
 
@@ -103,6 +110,34 @@ Frees memory allocated by the contract and transfers all potentially accidentall
 
 **Use Case:**  
 End the lifecycle of the VASP Index without preserving the existing mapping. Invalidates and obsoletes existing entries.
+
+```pseudocode
+transferOwnership(address newOwner) returns bool {public}
+```
+
+**Description:**  
+Sets the contract's state variable `candidateOwner` to the specified `newOwner`.
+
+**Conditions:**  
+None
+
+**Use Case:**  
+Called by the contract owner to prepare the transfer of the contract's ownership to a new owner.
+
+```pseudocode
+acceptOwnership() returns bool {public}
+```
+
+**Description:**  
+Sets the contract's state variable `owner` to `candidateOwner` and returns `true`.  
+Returns `false` if condition is not met.
+
+**Conditions:**  
+Function is called by the address that is stored in state variable `candidateOwner`.
+
+**Use Case:**  
+Called by the future owner in order to accept transfer of the contract's ownership.
+
 
 ## VASP Contract
 
