--- a/ovip-0003.md
+++ b/ovip-0003.md
@@ -195,6 +195,16 @@ Function is called by the address that is stored in state variable `candidateOwn
 Called by the future owner in order to accept transfer of the contract's ownership.
 
 
+```pseudocode
+getOwner() returns address {public}
+```
+
+**Description:**  
+Returns the value of the *owner* field.
+
+**Use Case:**  
+Potentially called by a future VASP Index to allow migration of exisiting VASP Codes.
+
 
 ```pseudocode
 setChannels(bytes4 newChannels)
@@ -277,6 +287,10 @@ MessageKeyChanged(string oldKey, string newKey)
 ```
 
 Key changes must be logged, including the previous and the new key. Note that the log is implicitely indexed by the log signature and by the emitting VASP Contract address.
+
+# Migration Blueprint
+
+Predicting the future is fairly difficult. However we must assume that a situation arises which demands a change to the VASP Index in one form or another. We see two scenarios. One where the VASP Contracts become obsolete and another where they could be reused by the new Index contract. In both cases we would like to be able to reserve previously reserved VASP Codes. This is not a technically required feature as the VASP Code Type of the VASP Identifier will change in any case but will provide more clarity. The blueprint for achieving this would be to have a new Index contract call the exisiting one to disallow reusage of existing VASP Codes unless the caller is the owner of the VASP Contract which is mapped to the VASP Code in the obsolete VASP Index. If possible it would then also be easy to point the new index entry towards the existing VASP contract, reducing redundancy and gas cost.
 
 # Motivation
 
