--- a/ovip-0012.md
+++ b/ovip-0012.md
@@ -163,3 +163,6 @@ Called by the owner if the contract is no longer maintained. It ensures the ther
 # Backwards Compatibility
 
 The specification proposed in this OVIP present a previously not specified part of the protocol. Client implementations that do not follow this standard will still be compatible with the network. Thus this OVIP is backwards compatible.
+<!--stackedit_data:
+eyJoaXN0b3J5IjpbLTIxMjc4NTQyNV19
+-->
