ovip-0015.md updated from https://stackedit.io/

--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -9,8 +9,7 @@ Created: 2020-06-19
 ```
 
 # Abstract
-
-Text
+This OVIP specifies 
 
 # Specification
 
@@ -78,6 +77,6 @@ Text
 
 Specification proposes new functionality.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE4NTg4ODA1NjcsLTY5NzI5MDIwLC0xOD
-A2NTEwODAsODQ0ODczMzI4XX0=
+eyJoaXN0b3J5IjpbODQ1Mzc0Nzc1LC0xODU4ODgwNTY3LC02OT
+cyOTAyMCwtMTgwNjUxMDgwLDg0NDg3MzMyOF19
 -->
