ovip-0015.md updated from https://stackedit.io/

--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -9,7 +9,7 @@ Created: 2020-06-19
 ```
 
 # Abstract
-This OVIP specifies 
+The OpenVASP Association maintains a directory of credentials
 
 # Specification
 
@@ -77,6 +77,6 @@ Text
 
 Specification proposes new functionality.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODQ1Mzc0Nzc1LC0xODU4ODgwNTY3LC02OT
+eyJoaXN0b3J5IjpbLTQ5MDAyNTA1LC0xODU4ODgwNTY3LC02OT
 cyOTAyMCwtMTgwNjUxMDgwLDg0NDg3MzMyOF19
 -->
