--- a/ovip-0015.md
+++ b/ovip-0015.md
@@ -1,25 +1,27 @@
 ```pseudocode
 OVIP: 15
-Title: OpenVASP Verification
+Title: OpenVASP Credential
 Author: David Riegelnig <david.riegelnig@bitcoinsuisse.com>
 Discussions-To: https://community.openvasp.org/#narrow/stream/21-protocol-.2F.20ovip
 Status: Proposal
 Type: Standard
-Created: 2020-06-19
+Created: 2020-06-20
 ```
 
 # Abstract
-The OpenVASP Association maintains a directory of credentials
+The OpenVASP Association maintains a directory (**OpenVASP Directory**) of VASPs whose identity and license status has been verified. For each  VASP, the directory provides a digitally signed proof of verification called **OpenVASP Credential.**
+
+This OVIP specifies how *OpenVASP Credentials* are structured and how conformant implementations must interpret them.
 
 # Specification
 
 ## 1. Credential Structure
 
-The OpenVASP Verification is a "Verifiable Credential" as specified in https://www.w3.org/TR/vc-data-model/ with the following elements.
+An OpenVASP Credential is a "Verifiable Credential" as per W3C standard (https://www.w3.org/TR/vc-data-model/) and has the following element structure.
 
 | Level 1             | Level 2        | Level 3     | Mult. | Values                                       | See  |
 | :------------------ | -------------- | ----------- | :----------- | :------------------------------------------- | :--- |
-| `@context`          |                |             | 1..1         | `https://www.w3.org/2018/credentials/v1`     |      |
+| `@context`          |                |             | 1..1         | `https://www.w3.org/2018/credentials/v1`     | 1 |
 | `id`                |                |             | 1..1         | `https://openvasp.org/verification`          |      |
 | `type`              |                |             | 1..1         | `VerifiableCredential`, `OpenVASPCredential` |      |
 | `issuer`            |                |             | 1..1         | `https://openvasp.org`                       |      |
@@ -31,7 +33,7 @@ The OpenVASP Verification is a "Verifiable Credential" as specified in https://w
 |                     |          | `vasp` | 1..1         | Elements as specified in [ovip-0013](), 1.1  |      |
 |                     | `license` |             | 0..*       |                                              |      |
 | |  | `type` | 1..1 | Name of recognized license or registration | |
-| |  | `country` | 1..1 | Licensing country | |
+| |  | `country` | 1..1 | Licensing country as per ISO 3166-1 alpha-2 | |
 | |  | `authority` | 1..1 | Licensing authority | |
 |                     |                | `regid`     | 0..1  | License number                               |      |
 |                     | `agreement`    |             | 0..*         |                                              |      |
@@ -44,7 +46,7 @@ The OpenVASP Verification is a "Verifiable Credential" as specified in https://w
 
 
 
-### 2.1. Example
+### 1.1. Example
 
 ```json
 {
