--- a/README.mediawiki
+++ b/README.mediawiki
@@ -89,6 +89,13 @@ We thank the Bitcoin community for introducing this process to handle standard i
 | David Riegelnig
 | Standard
 | Proposal
+|-
+| [[ovip-0015.md|15]]
+|
+| OpenVASP Credential
+| David Riegelnig
+| Standard
+| Proposal
 |}
 
 <!-- IMPORTANT!  See the instructions at the top of this page, do NOT JUST add OVIPs here! -->
