--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -229,8 +229,9 @@ Received OpenVASP *Envelopes* of type ACK are processed as per following steps.
 
 1. Read `envelopeACK` value from the *Payload* of the *Envelope* received.
 2. Lookup item in the Outbound Envelope Queue (see 5.4) based on matching `envelopeID`/`envelopeACK` values
-3. If a match can be found,
-   a) If its flag isCLOSE is `True`, Delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values.
+3. If a match can be found with the isCLOSE flag set to `False`, then delete the item from the queue.
+4. If a match can be found with the isCLOSE flag set to `True`, then:
+   a) Delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values; and
    b) Delete the item from the queue.
 
 ## 6. Implementing the Session Layer
