--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -228,11 +228,12 @@ If required, the *Envelope* is acknowledged as per following steps.
 Received OpenVASP *Envelopes* of type ACK are processed as per following steps.
 
 1. Read `envelopeACK` value from the *Payload* of the *Envelope* received.
-2. Lookup item in the Outbound Envelope Queue (see 5.4) based on matching `envelopeID`/`envelopeACK` values
+2. Lookup item in the Outbound Envelope Queue (see 5.4) based on matching `envelopeID`/`envelopeACK` values.
 3. If a match can be found with the isCLOSE flag set to `False`, then delete the item from the queue.
-4. If a match can be found with the isCLOSE flag set to `True`, then:  
-* delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values, and
-* delete the item from the queue.
+4. If a match can be found with the isCLOSE flag set to `True`, then:
+
+   delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values, and
+   delete the item from the queue.
 
 ## 6. Implementing the Session Layer
 
