--- a/ovip-0010.md
+++ b/ovip-0010.md
@@ -232,8 +232,9 @@ Received OpenVASP *Envelopes* of type ACK are processed as per following steps.
 3. If a match can be found with the isCLOSE flag set to `False`, then delete the item from the queue.
 4. If a match can be found with the isCLOSE flag set to `True`, then:
 
-   delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values, and
-   delete the item from the queue.
+   a) delete respective item in the *Connection* set (see 5.3) based on matching `connection`/`connectionID` values, and
+   
+   b) delete the item from the queue.
 
 ## 6. Implementing the Session Layer
 
